--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ button {
 
 .grid-container {
 	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
 	grid-gap: 20px;
 }
 
