updates blog page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,3 +47,9 @@ ul.no-bullets {
 	padding: 0;
 	margin: 0;
 }
+
+.post-excerpt {
+	border: 1px solid #d3d3d3;
+	border-radius: .25rem;
+	height: auto;
+}
