--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,12 @@
 	background-color: #ccc;
 }
 
+.card-separator {
+	background-size: cover;
+	height: 5px;
+	background-color: #040469;
+}
+
 .content {
 	padding: 15px;
 }
