fixes bg-img height to 180px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
 
 .bg-img {
 	background-size: cover;
-	min-height: 180px;
+	height: 180px;
 	background-position: center;
 	background-color: #ccc;
 }
