updates fpst2 portfolio page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
 
 .bg-img {
 	background-size: cover;
-	height: 120px;
+	min-height: 180px;
 	background-position: center;
 	background-color: #ccc;
 }
