--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
 .bg-img {
 	background-size: cover;
 	min-height: 180px;
+	max-height: 200px;
 	background-position: center;
 	background-color: #ccc;
 }
