--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -59,4 +59,6 @@ ul.no-bullets {
 	border: 1px solid #d3d3d3;
 	border-radius: .25rem;
 	height: auto;
+	margin-top: -15px;
+	margin-bottom: 10px;
 }
