--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 .card {
-	border: 2px solid #d3d3d3;
+	border: 2px solid #000000;
 	border-radius: .5rem;
 	height: 400px;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -57,7 +57,7 @@ ul.no-bullets {
 }
 
 .post-excerpt {
-	border: 2px solid #d3d3d3;
+	border: 2px solid #000000;
 	border-radius: .5rem;
 	height: auto;
 	margin-top: -15px;
