updates portfolio card style

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,15 @@
 .card {
-	border: 2px solid #000000;
+	border: 1px solid #000000;
 	border-radius: .5rem;
 	height: 400px;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.card::after {
+	content: "";
+	position: absolute;
+	bottom: 0; top:0; left:0; right:0;
+	border: 1px solid #000000;
 }
 
 .bg-img {
