updates portfolio card img style

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,10 @@
 	background-color: #ccc;
 }
 
+.bg-img-fill {
+	border-radius: .5rem;
+}
+
 .card-separator {
 	background-size: cover;
 	height: 5px;
