--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ button {
 	padding: .5rem 1rem;
 	cursor: pointer;
 	border-radius: .25rem;
-	margin-bottom: 10px;
+	padding-bottom: 5px;
 }
 
 .grid-container {
