--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,7 +18,10 @@
 }
 
 .content {
-	padding: 15px;
+	padding-top: 10px;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-bottom: 20px;
 }
 
 button {
@@ -27,7 +30,6 @@ button {
 	padding: .5rem 1rem;
 	cursor: pointer;
 	border-radius: .25rem;
-	padding-bottom: 5px;
 }
 
 .grid-container {
