--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,10 +18,7 @@
 }
 
 .content {
-	padding-top: 10px;
-	padding-left: 10px;
-	padding-right: 10px;
-	padding-bottom: 20px;
+	padding: 15px;
 }
 
 button {
@@ -30,6 +27,7 @@ button {
 	padding: .5rem 1rem;
 	cursor: pointer;
 	border-radius: .25rem;
+	margin-bottom: 10px;
 }
 
 .grid-container {
