--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,7 @@
 
 .content {
 	padding: 15px;
+	margin-bottom: 10px;
 }
 
 button {
@@ -26,8 +27,7 @@ button {
 	border: 1px solid #2196F3;
 	padding: .5rem 1rem;
 	cursor: pointer;
-	border-radius: .25rem;
-	margin-bottom: 10px;
+	border-radius: .25rem;;
 }
 
 .grid-container {
