--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,7 +60,7 @@ ul.no-bullets {
 	height: auto;
 	margin-top: -15px;
 	margin-bottom: 10px;
-	box-shadow: 5px 5px 3px grey;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .site-title::before {
